Add 'Working Process' and 'Featured Work' blocks

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ span {
 	font-family: 'open_sanssemibold';
 }
 
+h1 {
+	font-family: 'open_sanssemibold';
+	font-size: 3.125em !important;
+	color: #585858;
+}
+
 /*
 ***********
 * =header
@@ -137,4 +143,142 @@ form h3 {
 	font-size: 20px;
 	margin-left: 110px;
 	font-weight: lighter;
+}
+
+/*
+***********
+* =work-process
+***********
+*/
+
+.work-process {
+	position: absolute;
+    top: 920px;
+    width: 100%;
+}
+
+.work-process h1 {
+/*	margin-top: 0;*/
+}
+
+.work-process .description {
+	margin-top: 10.069444444%;
+}
+
+.work-process ul {
+	padding: 0;
+	margin-top: 7.638888888%;
+    margin-bottom: 12.5%;
+}
+
+.work-process li {
+	display: inline-table;
+	width: 18.055555555%;
+	margin-right: 02.083333333%;
+	text-align: center;
+	color: white;
+	position: relative;
+}
+
+.work-process li:first-child {
+	margin-left: 10.416666666%;
+	background: #4eb2f7;
+}
+
+.work-process li:nth-child(2) {
+	background: #c049f8;
+}
+
+.work-process li:nth-child(3) {
+	background: #817eff;
+}
+
+.work-process li:last-child {
+	background: #f74770;
+}
+
+.work-process li:last-child i {
+	-moz-transform: rotate(-15deg); /* Для Firefox */
+    -ms-transform: rotate(-15deg); /* Для IE */
+    -webkit-transform: rotate(-15deg); /* Для Safari, Chrome, iOS */
+    -o-transform: rotate(-15deg); /* Для Opera */
+    transform: rotate(-15deg);
+}
+
+.work-process li i {
+    margin-top: 19.235%;
+	opacity: 0.9;
+}
+
+.work-process li p {
+	font-family: 'open_sansregular';
+	font-size: 0.9375em;
+	margin: auto;
+	margin-top: 09.615384615%;
+    width: 85.153846%;
+	padding-bottom: 13%;
+}
+
+.btn {
+	position: absolute;
+    bottom: -1.75rem;
+    left: 0.9375rem;
+    font-size: 1em;
+    font-family: opensansreguar;
+    background: white;
+    color: black;
+    width: 87.692307692%;
+    height: 21.153846153%;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    box-shadow: 0 0 70px -23px black;
+
+}
+
+.work-process li .btn p {
+	padding-top: 1.125rem;
+	font-family: 'open_sansregular';
+    font-size: 0.9375em;
+    margin: auto;
+    width: 71.153846153%;
+}
+
+
+/*
+***********
+* =featured-work
+***********
+*/
+
+.featured-work {
+	position: absolute;
+	top: 1690px;
+	width: 100%;
+	background: #fbfbfb;
+}
+
+.featured-work .description {
+	margin-top: 9.027777777%;
+}
+
+.featured-work ul {
+	padding: 0;
+	margin: auto;
+	margin-top: 7.638888888%;
+	margin-bottom: 11.805555555%;
+	width: 78.819444444%;
+}
+
+.featured-work li {
+    display: inline-block;
+    width: 31.222515391%;
+    height: 355px;
+    background: #ff5c36;
+    margin-right: 2.643171806%;
+    margin-bottom: 1.763%;
+}
+
+.featured-work li:nth-child(3), .featured-work li:nth-child(6), .featured-work li:last-child {
+	margin-right: 0;
 }
